--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,9 +1,10 @@
+header img {
+  width: 250px;
+  margin-left: 200px;
+}
 .product--cards-container {
   display: flex;
   flex-wrap: wrap;
   width: 930px;
   margin: 0 auto;
-}
-.bitcoin__img--container {
-  background-image: url('../assets/img/bitcoinbaby2x.jpg');
 }
