--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,24 @@ header {
     text-align: center;
     background-color: var(--some-green);
 }
-header img {
-    margin: 40px 70px 0px;
-    align-items: center;
-}
+.navbar__container ul {
+    font-size: 2rem;
+  }
+.navbar__container ul li {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 2rem;
+  }
+.navbar__container a {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+  .navbar__container span {
+    padding: 1rem 1.5rem;
+    background-color: #3a5e62;
+    border-radius: 3rem;
+  }
 .header__title--container {
     width: 90%;
     min-width: 288px;
@@ -129,7 +143,7 @@ main {
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background: url('../assets/img/plant-7.jpg');
+    background: url('../assets/img/plant-frogg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -139,7 +153,7 @@ main {
     height: 200px;
     margin: 0 auto;
     margin-bottom: 50px;
-    background: url('../assets/img/plant-9.jpg');
+    background: url('../assets/img/plant-7.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
