--- a/css/tablet.css
+++ b/css/tablet.css
@@ -6,5 +6,23 @@ header img {
   display: flex;
   flex-wrap: wrap;
   width: 930px;
-  margin: 0 auto;
+  margin: 0 auto;  
+}
+.navbar__container ul {
+  font-size: 2rem;
+}
+.navbar__container ul li {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 2rem;
+}
+.navbar__container a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.navbar__container span {
+  padding: 1rem 1.5rem;
+  background-color: #3a5e62;
+  border-radius: 3rem;
 }
