--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,11 @@ header {
     text-align: center;
     background-color: var(--some-green);
 }
+/*
+.header__title--container {
+    visibility: hidden;
+}
+*/
 .navbar__container ul {
     font-size: 2rem;
   }
@@ -110,7 +115,7 @@ header {
     display: inline-block;
     width: 13px;
     height: 8px;
-    margin-left: 10px;
+    margin-right: 10px;
     background-image: url('../assets/icons/down-arrow.svg');
 }
 main {
