add css desktop title

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,46 @@
-.header__title--container h1 {
-  font-size: 3rem;
+.header__title--container {
+  width: 90%;
+  max-width: 1004px;
+  align-self: left;
+} 
+.background__img--title {
+  position: absolute;
+  width: 72%;
+  height: 494px;
+  margin: 0 auto;
+  background: url('../assets/img/background-header.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+.header__title--container h1 {
+  position: absolute;
+  font-size: 3rem;
+  font-size: 6rem;
+  padding: 20rem 20rem 0 0;
+  text-align: left;
+  line-height: 5rem;
+  -webkit-text-stroke: .1rem black;
+}
+.header__title--container p {
+  position: absolute;
+  margin-top: 36.5rem;
+  font-size: 3rem;
+  text-align: left;
+  margin-left: 0.5rem;
+  -webkit-text-stroke: .1rem black;
+}
+.header__title--container .header__button {
+  left: calc(21% - 109px);
+  top: 473px;
+}
+.main__exchange--container .background__img {
+  visibility: hidden;
+}
+.main__exchange--container-title {
+  min-width: 1004px;
+}
+
 .product--cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -12,8 +52,11 @@
 }
 .navbar__container ul li {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-left: 17rem;
+  padding-top: 2.5rem;
   list-style: none;
+  letter-spacing: .2rem;
   margin: 2rem;
 }
 .navbar__container a {
