--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,25 @@ main {
   height: auto;
   background-color: var(--off-white);
 }
+.product--cards-container-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+.main__product--detail-main {
+  background-color: var(--some-green);
+  height: auto;
+  min-width: 320px;
+  padding: 40px 10px;
+  position: relative;
+  width: 100%;
+}
+.product--cards-container-main img{
+  width: 30%;
+  border-radius: 1rem;
+  box-shadow: 10px 10px 12px -8px rgba(0,0,0,0.99);
+}
 .main__exchange--container {
   width: 100%;
   height: auto;
@@ -181,6 +200,7 @@ main {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  box-shadow: 10px 10px 12px -8px rgba(0,0,0,0.99);
 }
 .main__exchange--container h2 {
   margin-bottom: 30px;
@@ -341,6 +361,13 @@ main {
   margin-top: 20px;
   font-size: 1.5rem;
   color: #757575;
+}
+.plans__about--text a{
+  text-decoration: none;
+  color: var(--black);
+}
+.plans__about--text a:hover {
+  color: var(--bitcoin-orange);
 }
 footer {
   display: flex;
