--- a/css/desktop.css
+++ b/css/desktop.css
@@ -118,7 +118,7 @@ section.scrollmenu {
   height: 500px;
   margin: 0 auto;
   margin-bottom: 50px;
-  background: url('../assets/img/logo-artemisa.svg');
+  background: url('../assets/img/logo-artemisa-hd.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
