--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ section.scrollmenu {
   margin: 0 auto;
   margin-bottom: 50px;
   border-radius: .5rem;
-  background: url("../assets/img/logo-artemisa.svg");
+  background: url("../assets/img/logo-artemisa.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
